# Streaming_Predictor_Boilerplate

./: .gitignore  .pre-commit-config.yaml  Notes.md  README.md  cryptoNewsDataset_CryptoNewsDataset_csvOutput.rar at main · soheilrahsaz_cryptoNewsDataset.html  pyproject.toml
.history/: Makefile_20240917112823  Makefile_20240918171853  redpanda_20240917112823.yml  redpanda_20240918115628.yml
cryptoNewsDataset_CryptoNewsDataset_csvOutput.rar at main · soheilrahsaz_cryptoNewsDataset_files/: 103512255  38767606  app_assets_modules_github_ref-selector_ts-842c74d2eab4.js.download  app_assets_modules_github_sticky-scroll-into-view_ts-7cbef09a422c.js.download  behaviors-c3950819a4aa.js.download  code-9e1913b328be.css  code-menu-b5f092ec4b30.js.download  codespaces-a493a4b9528f.js.download  copilot-chat-6b7f75958a51.js.download  copilot-chat.eaee47dfe89b7e75e373.module.css  copilot-markdown-rendering-e18097b08a37.css  dark_high_contrast-cff1c9b27b1a.css  element-registry-3cb970f9c462.js.download  environment-7b93e0f0c8ff.js.download  github-e72829f5538b.css  github-elements-902713b269e2.js.download  (+44 more)
services/news-signal/: Dockerfile  Makefile  fine_tuning.py  golden_dataset.py  pyproject.toml  requirements.txt  run.py  settings.env  utils.py
services/news-signal/data/: golden_dataset_claude.jsonl
services/news-signal/llms/: base.py  claude.py  config.py  factory.py  ollama.env  ollama.py  pyproject.toml
services/news-signal/outputs/checkpoint-100/: adapter_config.json  trainer_state.json
services/news-signal/outputs/checkpoint-60/: adapter_config.json  trainer_state.json
services/price_predictor/: Dockerfile  pyproject.toml
services/price_predictor/models/: current_price_baseline.py  moving_average_baseline.py
services/price_predictor/src/: feature_engineering.py  hopsworks_api  model_registry.py  ohlc_data_reader.py  predictions.py  preprocessing.py  training.py
services/topic_to_feature_store/: Dockerfile  Makefile  pyproject.toml
services/topic_to_feature_store/src/: hopsworks_api.py  main.py
services/trade_to_ohlc/: Dockerfile  Makefile  dev.env  historical.dev.env  historical.prod.env  live.dev.env  live.prod.env  prod.env  pyproject.toml
services/trade_to_ohlc/src/: config.py  main.py
(+125 files in other folders)
