[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["Oscar Arroyo Vega <arroscar@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<3.13"
quixstreams = "^2.11.0"
loguru = "^0.7.2"
pydantic = "^2.9.2"
botocore = "1.34.92"
urllib3 = "1.26.5"
hopsworks = "^3.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
