[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["Oscar Arroyo Vega <arroscar@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
loguru = "^0.7.2"
quixstreams = "^2.10.0"
pydantic = "^2.9.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
